--- a/estate_nursery/views/estate_planting_view.xml
+++ b/estate_nursery/views/estate_planting_view.xml
@@ -26,7 +26,7 @@
                         <button name="signal_draft" type="workflow"
                                 string="Reject"
                                 class="oe_highlight"
-                                states="confirmed,validate1,validate2,"
+                                states="confirmed,validate1,validate2"
                                 groups="estate.group_assistant"/>
 
                         <button name="signal_confirm" type="workflow"
@@ -50,23 +50,11 @@
                         <button name="signal_done" type="workflow"
                                 string="Validate"
                                 class="oe_highlight"
-                                states="validate2,validate3"
-                                groups="estate.group_manager"/>
-
-                        <button name="signal_return" type="workflow"
-                                string="Return Seed"
-                                class="oe_highlight"
-                                states="done"
-                                groups="estate.group_assistant"/>
-
-                        <button name="signal_approve3" type="workflow"
-                                string="Done"
-                                class="oe_highlight"
-                                states="return"
+                                states="validate2"
                                 groups="estate.group_manager"/>
 
                         <field name="state" widget="statusbar"
-                               statusbar_visible="draft,confirmed,done,return,done2"
+                               statusbar_visible="draft,confirmed,done"
                                statusbar_color='{"draft":"blue",}'/>
                     </header>
                     <sheet>
@@ -98,9 +86,12 @@
                                                 'default_seeddo_id': id}"/>
                                 </page>
 
-                                <page string="Return Seed" attrs="{'invisible':[('state','!=','done'),
-                                ('state','!=','return'),('state','!=','validate3')],'readonly':[('state','=','validate3')]}">
+                                <page string="Return Seed" attrs="{'invisible':[('state','!=','validate2'),
+                                ('state','!=','done')]}">
                                         <field name="return_ids" string="Information For Return Seed"
+                                               attrs="{
+                                        'required' : [('state', '=', 'validate2')],
+                                        'readonly' : [('state', '=', 'done')]}"
                                                 context="{'tree_view_ref' : 'estate_nursery.view_tree_returnseed',
                                                 'default_seeddo_id': id}"/>
                                 </page>
@@ -314,10 +305,10 @@
             <field name="arch" type="xml">
                 <tree string="Return line View" colors="red:qty_return" editable="bottom">
                     <field name="bpb_id" readonly="1" invisible="1"/>
+                    <field name="batch_id" string="Batch no" required="1" options="{'no_create_edit': True}"/>
                     <field name="block_location_id" string="Blok" options="{'no_create_edit': True}" />
                     <field name="qty_request" string="&#931; Quantity Request ." sum="Qty"/>
                     <field name="qty_return" string="&#931; Quantity Return ." sum="Qty"/>
-                    <field name="batch_id" string="Batch no" required="1" options="{'no_create_edit': True}"/>
                     <field name="location_id" string="Plot" options="{'no_create_edit': True}"/>
                     <field name="qty_transfer" string="&#931; Quantity transfer ." sum="Qty"/>
                     <field name="comment"/>
@@ -435,7 +426,8 @@
                                 <field name="variety_id" attrs="{'required': [('state','!=','draft')],
                                  'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
                                 <field name="total_qty_pokok" readonly="1"/>
-                                <field name="date_request" string="BPB Date Request" required="1"/>
+                                <field name="date_request" string="BPB Date Request" required="1" attrs="{
+                                 'readonly': [('state','=','validate2'),('state','=','done')]}"/>
                             </group>
                         </group>
 
@@ -466,11 +458,11 @@
             <field name="model">estate.nursery.requestline</field>
             <field name="arch" type="xml">
                 <tree string="Request line View" colors="red:qty_request" editable="bottom">
-                    <field name="block_location_id" string="Blok" options="{'no_create_edit': True}" />
-                    <field name="large_area" string="Large(Ha)"/>
-                    <field name="qty_request" string="&#931; Quantity Request ." sum="Qty"/>
                     <field name="batch_id" string="Batch no" options="{'no_create_edit': True}"/>
                     <field name="location_id" string="Plot" options="{'no_create_edit': True}"/>
+                    <field name="large_area" string="Large(Ha)"/>
+                    <field name="qty_request" string="&#931; Quantity Request ." sum="Qty"/>
+                    <field name="block_location_id" string="Blok" options="{'no_create_edit': True}" />
                     <field name="comment"/>
                 </tree>
             </field>
