--- a/estate_vehicle/views/estate_vehicle_timesheet.xml
+++ b/estate_vehicle/views/estate_vehicle_timesheet.xml
@@ -7,12 +7,15 @@
             <field name="arch" type="xml">
                 <tree string="Estate timesheet activity Tree" editable='bottom' delete="true">
                     <field name="date_activity_transport" string="Date Activity"/>
-                    <field name="activity_id" string="Activity"/>
-                    <field name="vehicle_id" string="Vehicle"/>
-                    <field name="employee_id" string="Employee Name"/>
-                    <field name="start_location" string="Start Location"/>
-                    <field name="end_location" string="End Location"/>
-                    <field name="start_time" string="Start Time"/>
+                    <field name="dc_type" invisible="1"/>
+                    <field name="vehicle_id" string="Vehicle" options="{'no_create_edit': True}"/>
+                    <field name="employee_id" string="Driver" options="{'no_create_edit': True}"/>
+                    <field name="uom_id" string="UOM" options="{'no_create_edit': True}"/>
+                    <field name="unit" string="Unit"/>
+                    <field name="start_location" string="Start Location" options="{'no_create_edit': True}"/>
+                    <field name="end_location" string="End Location" options="{'no_create_edit': True}"/>
+                    <field name="activity_id" string="Activity" options="{'no_create_edit': True}"/>
+                    <field name="start_time" string="Start Time" />
                     <field name="end_time" string="End Time"/>
                     <field name="distance_location" readonly="1" string="Distance Location ">{‘readonly_by_pass’: True}</field>
                     <field name="total_time" string="&#931; time " readonly="1">{‘readonly_by_pass’: True}</field>
@@ -30,6 +33,7 @@
                     <sheet>
                         <group>
                             <group>
+                                <!--<field name="seeddo_id" invisible="1"/>-->
                                 <field name="date_activity_transport" required="1"/>
                                 <field name="employee_id" attrs="{'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
                                 <field name="activity_id" attrs="{'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
