--- a/estate_vehicle/views/estate_vehicle_timesheet.xml
+++ b/estate_vehicle/views/estate_vehicle_timesheet.xml
@@ -7,6 +7,7 @@
             <field name="arch" type="xml">
                 <tree string="Estate timesheet activity Tree" editable='bottom' delete="true">
                     <field name="date_activity_transport" string="Date Activity"/>
+                    <field name="owner_id"  invisible="1" readonly="1"/>
                     <field name="dc_type" invisible="1"/>
                     <field name="vehicle_id" string="Vehicle" options="{'no_create_edit': True}"/>
                     <field name="employee_id" string="Driver" options="{'no_create_edit': True}"/>
