--- a/estate_vehicle/views/estate_nursery_vehicle.xml
+++ b/estate_vehicle/views/estate_nursery_vehicle.xml
@@ -21,5 +21,18 @@
                 </group>
             </field>
         </record>
+
+          <!-- Extend Form to include Nursery fields -->
+        <record model="ir.ui.view" id="type_vehicle_form_inherited">
+            <field name="name">Estate Vehicle Extension</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_form_view"/>
+            <field name="arch" type="xml">
+                <field name="active" position="after">
+                    <field name="type_vehicle" />
+                </field>
+
+            </field>
+        </record>
     </data>
 </openerp>
