[ADD] estate_vehicle : add model master factor multiple

--- a/estate_vehicle/views/inherit_vehicle_log_oil.xml
+++ b/estate_vehicle/views/inherit_vehicle_log_oil.xml
@@ -7,13 +7,28 @@
              <field name="inherit_id" ref="fleet.fleet_vehicle_form"/>
              <field name="arch" type="xml">
                  <xpath expr="//div[@class='oe_right oe_button_box']" position="inside">
-                     <button name="return_action_to_open"
-                         type="object"
+                     <button name="%(fleet_vehicle_log_oil_act)d"
+                         type="action"
                          class="oe_stat_button"
                          icon="fa-flask"
-                         context="{'xml_id':'fleet_vehicle_log_oil_act'}"
-                         help="show the fuel logs for this vehicle">
+                         help="show the oil logs for this vehicle">
                          <field name="oil_log_count" widget="statinfo" string="Oil"/>
+                     </button>
+
+                     <button name="%(fleet_vehicle_log_otherservice_act)d"
+                         type="action"
+                         class="oe_stat_button"
+                         icon="fa-book"
+                         help="show the Other Service logs for this vehicle">
+                         <field name="other_service_log_count" widget="statinfo" string="Other Service"/>
+                     </button>
+
+                     <button name="%(fleet_vehicle_log_sparepart_act)d"
+                         type="action"
+                         class="oe_stat_button"
+                         icon="fa-wrench"
+                         help="show the Sparepart logs for this vehicle">
+                         <!--<field name="sparepart_log_count" widget="statinfo" string="Sparepart"/>-->
                      </button>
                  </xpath>
              </field>
