[ADD] estate_vehicle : add model view untuk timesheet premi, dan menambahkan model untuk formula dan factor untuk perhitungan timesheet

--- a/estate_vehicle/views/estate_nursery_vehicle.xml
+++ b/estate_vehicle/views/estate_nursery_vehicle.xml
@@ -12,6 +12,7 @@
                         <field name="vehicle_type"/>
                     </group>
                     <group string="Vehicle Capacity &amp; status">
+                        <field name="category_unit_id" string="Category"/>
                         <field name="status_vehicle"/>
                         <field name="capacity_vehicle"/>
                     </group>
@@ -31,7 +32,6 @@
                 <field name="active" position="after">
                     <field name="type_vehicle" />
                 </field>
-
             </field>
         </record>
     </data>
